--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.3",
     "@heroicons/react": "^2.1.5",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.11.0",
     "home-assistant-js-websocket": "^9.4.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.3",
